#summary Changelog for all changes since the fork

= Changes =
== Version 1.42 ==
  * Switching to next or previous articles/feeds is much faster now
  * Major refactoring to make use of fragments and someday be able to implement a two-pane-layout...  

== Version 1.41 ==
  * Added "Share to Published" ability, just select TTRSS when you want to share any content to your published-feed.

== Version 1.4 ==
  * Added Label-Editing for articles
  * Fixed some bugs preventing labels from beeing refreshed properly
  * Fixed some UI glitches concerning the progressbar

== Version 1.39 ==
  * Added preference for "Load images" which, when disabled, forces the Webview to not load any content from the web.
  * Fixed Issue #99 "Sharing with Firefox Sync"
  * Implemented Issue #81: Show temporarily read items in "new articles", the read articles now are all left in the displayed list.
  * Longer update-interval for background refresh

== Version 1.38 ==
  * Adapt to API-changes, number of articles to be fetched at once has been reduced to 60, got no idea why but am now dealing with it properly.
  * Fixed some bugs in the mechanism to fetch new articles.
  
== Version 1.37 ==
  * Changed events, refreshing of the UI should now be really fast
  * Changed update-mechanism
  * Fixed refresh-button
  * Added separate Build for old devices (below Android 2.1) 
  * Bugfixes

== Version 1.36 ==
  * Notify user about upcoming DB-clean-up (VACUUM)
  * Improve DB-Locking by enabling it (please don't judge me, it's been years since I wrote the line db.setLockingEnabled(false))
  * UI refreshes again when items change (eg. are marked as read, published)
  * Added icons from SDK so all icons look the same
  * Cleaned up the ActionBar
  * Now using API-Level 17

== Version 1.35 ==
  * Articles are again marked as read when beeing read in the webinterface as long as there are new articles to be synced (API doesn't offer "changes since date/time", I can only guess what has changed)